alter_nhankhau_and_hokhau_entity